Avances y comienzo preparación punto 9
